[tool.poetry]
name = "downloader"
version = "0.1.0"
description = ""
authors = ["A. Fox <anthonyfox1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.68.1"
uvicorn = "0.15.0"
celery = "5.2.2"
redis = "4.0.2"
requests = "2.32.3"
yt-dlp = "*"
structlog = "^23.1.0"
types-yt-dlp = "^2025.9.5.20250907"
mypy = "^1.18.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pytest = "^7.4.2"
black = { version = "^23.9.1", allow-prereleases = true }
pytest-mock = "^3.11.1"
celery-types = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
